@startuml
hide members
hide footbox
hide circle

skinparam arrowColor DARKRED

class FindCommandParser
class FindCommand
interface "<<interface>>\nPredicate" as Predicate<T>
class AppointmentDateContainsKeywordsPredicate
class Person
class AppointmentDate

FindCommandParser --> FindCommand : creates
FindCommand --> Predicate : uses
AppointmentDateContainsKeywordsPredicate ..|> Predicate
AppointmentDateContainsKeywordsPredicate --> Person : tests
Person *--> "1" AppointmentDate
@enduml
